# HRM_Game

./: .gitignore  CMakeLists.txt  QtResourse.qrc  README.md  main.cpp
ans/: 2  3  4  5  6  7
include/: body.h  debug.h  hrm_gui.h  json-forwards.h  json.h  utils.h
level/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  level1.json
record/: 1.rec  2.rec  3.rec  Template.rec
src/: HRM_GUI.cpp  HRM_GUI.h  HRM_GUI.ui  body.cpp  hrm_gui.cpp  jsoncpp.cpp  main.cpp
test/: 1.in  10.in  11.in  12.in  13.in  13.out  14.in  15.in  16.in  17.in  19.in  20.in  3.in  4.in  5.in  6.in  6.out  7.in  8.in  9.in  9.out  a.out  main.cpp  start.sh
